# polylith-python-demo

./: README.md  pyproject.toml  workspace.toml
bases/TestPolylith/test_cli/: __init__.py  core.py
bases/TestPolylith/test_cli2/: __init__.py  core.py
components/TestPolylith/TestComponentA/: __init__.py  core.py
components/TestPolylith/TestComponentB/: __init__.py  core.py
projects/cli_project/: pyproject.toml
projects/cli_project2/: pyproject.toml
test/bases/TestPolylith/test_cli/: test_core.py
test/bases/TestPolylith/test_cli2/: test_core.py
test/components/TestPolylith/TestComponentA/: test_core.py
test/components/TestPolylith/TestComponentB/: test_core.py
