[tool.poetry]
name = "polylith-python-demo"
version = "0.1.0"
description = ""
authors = ["Schuyler Reinken <Schuyler.Reinken@va.gov>"]
readme = "README.md"
packages = [
    {include = "TestPolylith/test_cli",from = "bases"},
    {include = "TestPolylith/TestComponentB",from = "components"},
    {include = "TestPolylith/TestComponentA",from = "components"},
    {include = "TestPolylith/test_cli2",from = "bases"},
]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.12.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
